The Very Late Update: class buffs and more
- Added class damage, which now (if you have any) displays below gear damage for a given damage type
- Implemented Taboo, Celestial Blessing, Channeling, Dethroner, Totemic Empowerment, Culling, Formidable, Weapon Mastery
- Reimplemented Versatile, and fixed a bug where it would cause projectile damage to be NaN
- Implemented Retaliation
- Curse of Instability now averages your EHP types and displays the average
- Implemented Earth Aspect
- Worldly Protection now properly region scales

--- a/utils/translation/languages/en.json
+++ b/utils/translation/languages/en.json
@@ -26,6 +26,7 @@
     "items.type.projectile": "Projectile",
     "items.type.offhand": "Offhand",
     "items.type.mainhand": "Mainhand",
+    "items.type.alchemistBag": "Alchemist Bag",
     "items.type.consumable": "Consumable",
     "items.type.misc": "Misc",
     "items.type.charm": "Charm",
@@ -226,6 +227,7 @@
     "builder.stats.dr-ehp.fire": "Fire",
     "builder.stats.dr-ehp.fall": "Fall",
     "builder.stats.dr-ehp.ailment": "Ailment",
+    "builder.stats.dr-ehp.unstable": "Instability",
 
     "builder.stats.melee.attackSpeedPercent": "Attack Speed",
     "builder.stats.melee.attackSpeed": "Weapon Attack Speed",
@@ -253,5 +255,10 @@
     "builder.multipliers.resistance": "Resistance Multipliers",
     "builder.multipliers.health": "Health Multipliers",
     "builder.multipliers.attackSpeed": "Attack Speed Multipliers",
-    "builder.multipliers.speed": "Speed Multipliers"
+    "builder.multipliers.speed": "Speed Multipliers",
+
+    
+    "builder.stats.melee.classAttackDamagePercent": "Class Damage",
+    "builder.stats.projectile.classProjectileDamagePercent": "Class Projectile Damage",
+    "builder.stats.magic.classMagicDamagePercent": "Class Magic Damage"
 }
