fix some charm stats and situational descriptions

--- a/utils/translation/languages/en.json
+++ b/utils/translation/languages/en.json
@@ -48,16 +48,16 @@
     "items.enchant.blastProtection": "Multiplies explosion damage taken by 0.96 ^ (2 * level).",
     "items.enchant.fireProtection": "Multiplies fire damage taken by 0.96 ^ (2 * level). Reduces fire duration by 10% per level.",
     "items.enchant.featherFalling": "Multiplies fall damage taken by 0.96 ^ (3 * level).",
-    "items.enchant.shielding": "Gain (level * 20%) effective Armor when taking damage from an enemy within 2.5 blocks. If Shielding applies to damage that disables a shield, the enchantment is disabled for 5 seconds.",
-    "items.enchant.poise": "Gain (level * 20%) effective Armor when above 90% max health.",
-    "items.enchant.inure": "Gain (level * 20%) effective Armor when taking the same type of mob damage (melee, projectile, magic, blast) consecutively.",
-    "items.enchant.steadfast": "Scaling with the percentage of health missing, gain up to (level * 20%) effective Armor, but lose up to (level * 10%) Speed.",
-    "items.enchant.evasion": "Gain (level * 20%) effective Agility when taking damage from a source further than 4 blocks from the player.",
-    "items.enchant.reflexes": "Gain (level * 20%) effective Agility when there are more than 4 enemies within 8 blocks.",
-    "items.enchant.ethereal": "Gain (level * 20%) effective Agility on hits taken within 1.5 seconds of any previous hit.",
-    "items.enchant.tempo": "Gain (level * 20%) effective Agility on the first hit taken after 4 seconds of taking no damage. Gain half this bonus after 2 seconds of taking no damage.",
-    "items.enchant.guard": "Gain (level * 20%) effective Armor after blocking with a shield. Lasts for 4s if blocked from offhand, and 6s if blocked from mainhand.",
-    "items.enchant.cloaked": "Gain (level * 20%) effective Agility when there are 2 or less enemies within 5 blocks of the player.",
+    "items.enchant.shielding": "Gain effective Armor to grant up to 20% / 25% / 30% bonus EHP when taking damage from an enemy within 2.5 blocks. Taking damage that would stun a shield and activates Shielding reduces Shielding's effect to half for 5 seconds.",
+    "items.enchant.poise": "Gain effective Armor to grant up to 20% / 25% / 30% bonus EHP when above 90% Max Health. Half of the bonus is granted when above 70% Max Health.",
+    "items.enchant.inure": "Gain effective Armor to grant up to 20% / 25% / 30% bonus EHP when taking the same type of mob damage (melee, projectile, magic, or blast) consecutively.",
+    "items.enchant.steadfast": "Gain effective Armor to grant up to 20% / 25% / 30% bonus EHP. This bonus scales linearly with the amount of HP you are missing, up to 60%.",
+    "items.enchant.evasion": "Gain effective Agility to grant up to 20% / 25% / 30% bonus EHP when taking damage from a source further than 4 blocks from the player.",
+    "items.enchant.reflexes": "Gain effective Agility to grant up to 20% / 25% / 30% bonus EHP for 0.65s after damaging any mob. DoT/indirect damage abilities cannot trigger this bonus. The bonus is granted at half effectivity for an additional 0.35s.",
+    "items.enchant.ethereal": "Gain effective Agility to grant up to 20% / 25% / 30% bonus EHP when taking damage within 1.5 seconds of any previous damage from mobs.",
+    "items.enchant.tempo": "Gain effective Agility to grant up to 20% / 25% / 30% bonus EHP when taking damage after 4 seconds of taking no damage from mobs. Half of the bonus is granted after 2.5 seconds of taking no damage from mobs.",
+    "items.enchant.guard": "Gain effective Armor to grant up to 20% / 25% / 30% bonus EHP after blocking with a shield. Duration lasts for 4s if blocked from offhand, and 6s from mainhand. The bonus is also granted for 2s when taking damage greater than 35% of your health at once.",
+    "items.enchant.cloaked": "Gain effective Agility to grant up to 20% / 25% / 30% bonus EHP when there's 2 or less enemies within 5 blocks. Half the bonus is granted if there are 3 or less enemies. The full bonus is also applied for 6 seconds after slaying an Elite or Boss enemy.",
     "items.enchant.adaptability": "Allows secondary enchants to work on the defense type you have the most of rather than only one of Armor / Agility.",
     "items.enchant.secondWind": "Damage applied to the lower half of your max health (health below 50%) is multiplied by (0.9 ^ level). Applies retroactively.",
     "items.enchant.spellPowerBase": "Increases the damage of spells. Only works with Mage skills. Stacks with Magic Damage attribute.",
